<resources>
    <string name="app_name">AquaMaris</string>
    <string name="Noticias">Noticias</string>
    <string name="Provincias">Provincias</string>
    <string name="Top_noticias">Top Noticias</string>
    <string name="Ultimas_Noticias">Ultimas Noticias</string>
    <string name="logo" translatable="false">logo</string>
    <string name="Ajustes">Ajustes</string>
    <string name="sign_in_text">"Sign in to your\nAccount"</string>
    <string name="subtext">Enter your email and password to login</string>
    <string name="google_txt">Continue with Google</string>
    <string name="log_txt">Or login with</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="hidden_pass">*********</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="account_question">Don\'t have an account?</string>
    <string name="sign_up_link_txt">Sign up</string>
    <string name="log_in"><a href="#">Log in</a></string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_button">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="phone_number">999 99 99 99</string>
    <string name="or">Or</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="dateH">09/06/1993</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="spain">spain</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="informacion">Información</string>
    <string name="profile_email">profile_email</string>
    <string name="legal_notice">Legal Notice</string>
    <string name="insert_province">Insert province..</string>
    <string name="profile_icon">profile_icon</string>
    <string name="sorry_mssg">s!</string>
    <string name="info_not_found">Aun no hemos encontrado información de este pez…</string>
    <string name="slash" translatable="false">/</string>
    <string name="aviso_legal">Aviso legal</string>
</resources>