<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaAjustes">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineaHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/marine_blue"
        app:layout_constraintBottom_toTopOf="@id/lineaHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraint">


        <ImageView
            android:id="@+id/logo_img"
            android:adjustViewBounds="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/aqua_maris_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/fotoperfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/constraint"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/vertical"
        tools:ignore="MissingConstraints"
        android:src="@drawable/mapa_fg"
        android:background="@color/amarillo"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/marine_blue"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/white"
        app:cornerRadius="0sp"
        app:layout_constraintEnd_toStartOf="@id/vertical2"
        app:layout_constraintTop_toBottomOf="@id/constraint"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/infpersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/informacion"
        app:layout_constraintStart_toEndOf="@id/vertical"
        app:layout_constraintTop_toBottomOf="@id/fotoperfil"
        />

    <TextView
        android:id="@+id/nombreuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@id/vertical"
        app:layout_constraintTop_toBottomOf="@id/infpersonal"
        />




</androidx.constraintlayout.widget.ConstraintLayout>