<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/marine_blue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/signup_message"
        android:layout_marginTop="72dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up"
        android:textColor="@color/pasty_white"
        android:textStyle="bold"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent"
         />

    <TextView
        android:id="@+id/signup_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/already_have_an_account"
        android:textColor="@color/pasty_white"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@id/signup_link_1"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/signup_message" />

    <TextView
        android:id="@+id/signup_link_1"
        android:layout_marginEnd="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/log_in"
        android:textColor="@color/pasty_white"
        android:textSize="11sp"
        android:linksClickable="true"
        android:textColorLink="@color/pasty_white"
        app:layout_constraintTop_toBottomOf="@id/signup_message"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/signup_sub"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="42dp"
        android:layout_marginStart="3dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_form"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/signup_sub"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        >

        <EditText
            android:id="@+id/new_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="14dp"
            android:paddingEnd="2dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:hint="Name"
            app:layout_constraintEnd_toStartOf="@id/new_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/new_surname"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="14dp"
            android:paddingEnd="2dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:hint="Surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/new_name"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:paddingEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_name"/>

        <EditText
            android:id="@+id/popup_birthday"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:hint="@string/date_hint"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingStart="14dp"
            android:paddingEnd="2dp"
            android:drawableEnd="@drawable/calendar_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mail"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:paddingStart="54dp"
            android:paddingEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popup_birthday"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/spain_round"
            app:layout_constraintStart_toStartOf="@id/phone"
            app:layout_constraintTop_toBottomOf="@id/popup_birthday" />

        <View
            android:layout_marginTop="16dp"
            android:layout_marginStart="46dp"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:background="@color/pale_grey"
            app:layout_constraintStart_toStartOf="@id/phone"
            app:layout_constraintTop_toBottomOf="@id/popup_birthday"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:paddingStart="14dp"
            android:paddingEnd="2dp"
            android:hint="@string/hidden_pass"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/inter"
            android:background="@drawable/edit_text"
            android:drawableEnd="@drawable/pass_hidden_foreground"
            app:layout_constraintTop_toBottomOf="@id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/marine_blue"
            android:fontFamily="@font/inter_medium"
            android:text="@string/sign_up"
            app:cornerRadius="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <View
            android:id="@+id/lineStart"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/pale_grey"
            app:layout_constraintTop_toBottomOf="@id/signup_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_inbetween_lines"
            />

        <View
            android:id="@+id/lineEnd"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/pale_grey"
            app:layout_constraintTop_toBottomOf="@id/signup_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signup_inbetween_lines"
            />

        <TextView
            android:id="@+id/signup_inbetween_lines"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:textSize="12sp"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_button"/>

        <Button
            android:id="@+id/google_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/google_vector"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/sign_up_with_google"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_inbetween_lines"
            app:strokeColor="@color/pasty_white"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>